# UCM_Control_TFM

./: .gitignore  pyproject.toml  requirements.txt  start_wandb.bat
checkpoints/: agent_ep0.pth  agent_ep100.pth  agent_ep1000.pth  agent_ep1100.pth  agent_ep1200.pth  agent_ep1300.pth  agent_ep1400.pth  agent_ep1500.pth  agent_ep1600.pth  agent_ep1700.pth  agent_ep1800.pth  agent_ep1900.pth  agent_ep200.pth  agent_ep2000.pth  agent_ep2100.pth  agent_ep2200.pth  agent_ep2300.pth  agent_ep2400.pth  agent_ep2500.pth  agent_ep2600.pth  agent_ep2700.pth  agent_ep2800.pth  agent_ep2900.pth  agent_ep300.pth  agent_ep3000.pth  agent_ep3100.pth  agent_ep3200.pth  agent_ep3300.pth  agent_ep3400.pth  agent_ep3500.pth  agent_ep3600.pth  agent_ep3700.pth  agent_ep3800.pth  agent_ep3900.pth  agent_ep400.pth  agent_ep4000.pth  agent_ep4100.pth  agent_ep4200.pth  agent_ep4300.pth  agent_ep4400.pth  (+11 more)
config/: pytorch_config.yaml  training_config.yaml
runs/grid_agent_training/: events.out.tfevents.1771184214.MamartOC.14968.0  events.out.tfevents.1771184256.MamartOC.23728.0  events.out.tfevents.1771184325.MamartOC.27320.0  events.out.tfevents.1771184562.MamartOC.11760.0  events.out.tfevents.1771184591.MamartOC.9840.0  events.out.tfevents.1771184671.MamartOC.30232.0
src/tfm_control_ucm/agents/: ._policy.py  agent.py  utils.py
src/tfm_control_ucm/core/grid_env/: environment.py  map.py  robot.py  sensor.py
src/tfm_control_ucm/environment/: environment.py
src/tfm_control_ucm/environment/maps/: gridmap.py
src/tfm_control_ucm/environment/robots/: grid_robot.py
src/tfm_control_ucm/environment/sensors/: grid_lidar.py
src/tfm_control_ucm/maps/: map_simple.json
src/tfm_control_ucm/renderers/: grid_renderer.py
src/tfm_control_ucm/training/: grid_training_01.py  gridenv_wrappers.py  train_dqn.py
test/: test_render.py
test/core/: load_gridmap.py
test/environment/: load_gridmap.py
wandb/offline-run-20260215_232805-5vlv8pex/files/: requirements.txt
wandb/offline-run-20260215_233819-2zbev1gi/files/: requirements.txt
